Don't assert when the password entered is empty.

The password dialog is still shown too many times, but at least
it doesn't crash anymore.

BUG: 156990

svn path=/trunk/KDE/kdepim/; revision=818395